# hanno.braun-odw.eu

./: .gitattributes  .gitignore  .lfsconfig  Cargo.toml  README.md  config.toml  handbrake-video-preset.json  netlify.toml
backend/: Cargo.toml  backend.service  flake.nix  install.sh
backend/src/: args.rs  main.rs  server.rs
backend/src/server/: mod.rs  redirect.rs
backend/tls/: localhost.cert.pem
backend/zola/sass/: _media.scss  _newsletter.scss  _project.scss  _updates.scss
backend/zola/templates/: project.html
cli/: Cargo.toml  (+1 more)
model-api/: Cargo.toml  Dockerfile  README.md  logs
model-api/src/: main.rs
website/: .gitignore  Cargo.toml  _config.ts  backend.service  config.toml  flake.nix  install.sh  netlify.toml
website/content/: about.md  contact.md  feedback.md  home.md  services.md  subscribe.md
website/content/about/: index.md
website/content/notes/: _index.md
website/content/products/: _index.md
website/content/project/: _index.md
website/content/projects/: _index.md
website/content/updates/: _index.md
website/sass/: _base.scss  _contact.scss  _footer.scss  _globals.scss  _header.scss  _home.scss  _media.scss  _nav.scss  _newsletter.scss  _notes.scss  _products.scss  _project.scss  _projects.scss  _updates.scss  index.scss  style.scss
website/scripts/: build.sh  serve.sh
website/src/: args.rs
website/templates/: home.html  index.html  notes-page.html  notes.html  products-page.html  products.html  project.html  projects-page.html  projects.html  section.html  updates-page.html  updates.html
website/tls/: localhost.key.pem
website/zola/: config.toml
(+336 files in other folders)
