[package]
name    = "backend"
version = "0.1.0"
edition = "2018"


[dependencies]
axum               = "*"
clap               = "3.0.0-beta.2"
tracing            = "*"
tracing-subscriber = "*"

[dependencies.tokio]
version  = "*"
features = ["full"]

[dependencies.warp]
version  = "*"
features = ["tls"]
