[package]
name    = "website"
version = "0.1.0"
edition = "2018"


[dependencies]
anyhow             = "*"
clap               = "3.0.0-beta.2"
image              = "*"
time               = "*"
tracing            = "*"
tracing-subscriber = "*"

[dependencies.serde]
version  = "*"
features = ["derive"]

[dependencies.tokio]
version  = "*"
features = ["full"]

[dependencies.warp]
version  = "*"
features = ["tls"]
